# heda

./: .gitignore  README.md  bun.lockb  changelog.md  components.json  drizzle.config.ts  eslint.config.js  mdsx.svelte.js  next.config.mjs  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  test.heda  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  publish.yml
app/: layout.tsx  page.tsx
app/dashboard/: page.tsx
components/: app-sidebar.tsx  file-actions.tsx  sidebar-nav-list.tsx  sidebar-skeleton.tsx
components/custom/data-table/: columns.tsx  data-table-view-options.tsx  data-table.tsx
components/custom/load/: load-table.tsx
components/custom/sidebar/: sidebar-footer.tsx  sidebar-header.tsx
lib/assets/icons/: index.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0000_mixed_cammi.sql  0001_condemned_captain_america.sql
src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  _journal.json
src-tauri/permissions/: home-read-extends.toml
src-tauri/src/: lib.rs  main.rs
src/lib/assets/: index.ts
src/lib/components/: app-sidebar.svelte  sidebar-page.svelte
src/lib/constants/: index.ts
src/lib/db/: index.ts  migrate.ts
src/lib/hooks/: node-collapsibles.svelte.ts  project-state.svelte.ts  project.svelte.ts  select-nodes-to-delete.svelte.ts  select-parent.svelte.ts  settings-state.svelte.ts  (+2 more)
src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
~/.tauri/: heda.key.pub
(+244 files in other folders)
